--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,16 +19,15 @@
     "@capsizecss/metrics": "^0.1.0",
     "@dessert-box/react": "^0.2.0",
     "@react-aria/utils": "^3.10.0",
-    "@vanilla-extract/css": "^1.6.3",
-    "@vanilla-extract/dynamic": "^2.0.0",
-    "@vanilla-extract/recipes": "^0.2.1",
-    "@vanilla-extract/sprinkles": "^1.3.1",
+    "@vanilla-extract/css": "^1.7.0",
+    "@vanilla-extract/dynamic": "^2.0.2",
+    "@vanilla-extract/recipes": "^0.2.4",
+    "@vanilla-extract/sprinkles": "^1.4.0",
     "reakit": "^1.3.11"
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@vanilla-extract/rollup-plugin": "*"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
@@ -40,6 +39,7 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@vanilla-extract/rollup-plugin": "^1.0.1",
     "eslint": "^8.3.0",
     "jest": "^27.4.5",
     "react": "^17.0.2",
